--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -65,4 +65,3 @@ $icon-size                    : 24px;
 $asset--icon-shadow-color     : #fff;
 $asset-subject-headline-height: 3rem;
 $asset-max-height             : calc(100vh - #{$topbar-height}*2.5);
-$asset-min-height             : 70vh;
